# ai-cursor-init

./: .cursor-init.example.yaml  .gitignore  AI_DOCUMENTATION.md  CHANGELOG.md  CONTRIBUTING.md  CURSOR_OPTIMIZATION_GUIDE.md  README.md  SECURITY.md  move-cli-to-branch.sh  optimize-cursor-rules.sh  pr_description.txt  pyproject.toml  requirements.txt
.cursor/: README.md
.cursor/commands/cursor-init/: add-template.md  adr.md  check-docs.md  gen-arch-diagram.md  gen-dependency-diagram.md  gen-deployment-diagram.md  gen-er-diagram.md  gen-onboarding-diagram.md  gen-security-diagram.md  init-docs.md  list-templates.md  rfc.md  sync-category.md  sync-doc.md  sync-docs.md  update-docs.md
.cursor/rules/cursor-init/context/: adr-context.mdc  architecture-context.mdc  docs-context.mdc  module-context.mdc
.cursor/rules/cursor-init/diagrams/: gen-arch-diagram.mdc  gen-dependency-diagram.mdc  gen-deployment-diagram.mdc  gen-er-diagram.mdc  gen-onboarding-diagram.mdc  gen-security-diagram.mdc
.cursor/rules/cursor-init/documentation/: adr.mdc  check-docs.mdc  init-docs.mdc  rfc.mdc  (+5 more)
.cursor/templates/api/: README.md
.cursor/templates/architecture/: api_documentation.md  architecture_enterprise.md  architecture_google.md
.cursor/templates/diagrams/: data_model_comprehensive.md  data_model_simple.md
.cursor/templates/onboarding/: onboarding_developer.md  onboarding_general.md  onboarding_python.md
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: docs_freshness_check.yml  publish.yml
cli/cursor_init/: adr.py  ai_config.py  ai_service.py  config.py  init_command.py  update_docs.py
docs/: api-documentation.md  architecture.md  data-model.md  onboarding.md
docs/adr/: 0001-record-architecture-decisions.md  0002-adopt-ai-powered-documentation-generation.md  0003-test-ai-generated-adr.md  0004-remove-cli-interface.md  0005-migrate-to-cursor-native-commands.md
docs/development/: doc_linter_strategy.md  secure_parsing_strategy.md  template-customization.md
templates/diagrams/: er_diagram.md
templates/onboarding/: onboarding_frontend.md
(+2 files in other folders)
