[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ai-cursor-init"
version = "0.1.0"
description = "AI-driven in-IDE documentation framework for generating and maintaining project documentation, diagrams, and Architecture Decision Records (ADRs)"
readme = "README.md"
license = "MIT"
authors = [
    {name = "cursor-init contributors", email = "e@mgiovani.com"}
]
keywords = ["documentation", "adr", "architecture", "diagrams", "cursor", "ide", "ai"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Documentation",
    "Topic :: Software Development :: Documentation",
    "Topic :: Text Processing :: Markup :: Markdown",
]
requires-python = ">=3.8"
dependencies = [
    "click>=8.0.0",
    "pyyaml>=6.0",
    "jinja2>=3.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "black>=22.0.0",
    "isort>=5.0.0",
    "flake8>=5.0.0",
    "mypy>=1.0.0",
    "build>=0.10.0",
    "twine>=4.0.0",
]

[project.urls]
Homepage = "https://github.com/mgiovani/ai-cursor-init"
Repository = "https://github.com/mgiovani/ai-cursor-init"
Issues = "https://github.com/mgiovani/ai-cursor-init/issues"
Documentation = "https://github.com/mgiovani/ai-cursor-init#readme"

[project.scripts]
ai-cursor-init = "cursor_init.__main__:main"

[tool.setuptools.packages.find]
where = ["cli"]

[tool.setuptools.package-data]
cursor_init = ["templates/**/*"]

[tool.black]
line-length = 88
target-version = ['py38']

[tool.isort]
profile = "black"
line_length = 88

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true 